2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/labeling/colorize.hh: Add a missing inline.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Add more from_to overloards.

	* mln/convert/impl/from_unsigned_to_value.hh,
	* mln/value/label.hh: Here.

2011-03-01  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/labeling/fill_holes.hh: Improve speed.

2011-03-01  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/fun/v2v/rgb_to_luma.hh: New function for grayscale
	conversion.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/util/array.hh: Add last() method.

2011-02-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Add an optional base index for debug::iota.

	* mln/debug/iota.hh,
	* mln/debug/iota.spe.hh: Here.

2011-01-27  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/convert/to_qimage_nocopy.cc: Fix a warning.

2011-01-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix a serious bug with gcc 4.5 and later.

	* mln/value/equiv.hh: Return values by copy.

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Work around g++ 4.5 deficiencies to compile Milena.

	* mln/core/concept/proxy.hxx
	(internal::helper_unproxy_rec< P, true >::P_)
	(internal::helper_unproxy_rec< const P, true >::P_):
	Remove these intermediate typedefs...
	(internal::helper_unproxy_rec< P, true >::ret)
	(internal::helper_unproxy_rec< const P, true >::ret):
	...to inline these definitions.
	* mln/util/array.hh
	(internal::subject_impl<util::array<T>&, E>::operator())
	(internal::subject_impl<util::array<T>&, E>::operator[])
	(internal::subject_impl<const util::array<T>&, E>::operator() const)
	(internal::subject_impl<const util::array<T>&, E>::operator[] const):
	* mln/core/site_set/p_graph_piter.hh
	(internal::subject_impl< const p_graph_piter<S,I>&, E >::graph):
	Use the exact same return type as in the declaration.

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Fix forward declarations in complex piters.

	* mln/core/site_set/p_complex_piter.hh,